--- a/Proyecto1/nft-preview-card-component-main/style.css
+++ b/Proyecto1/nft-preview-card-component-main/style.css
@@ -28,7 +28,7 @@ body{
 .card{
     background-color: var(--Very-dark-blue-card-BG);
     width: 350px;
-    height: 550px;
+    height: 570px;
     display: flex;
     flex-direction: column;
     padding: 22px;
@@ -106,11 +106,11 @@ span:hover{
 }
 
 .capa_imagen{
-    position: absolute;
+    position: relative;
     background-color: hsla(178, 100%, 50%, 0.411);
     width: 300px;
     height: 300px;
-    top: 230px;
+    bottom: 305px;
     border-radius: 15px;
     display: flex;
     align-items: center;
@@ -123,6 +123,14 @@ span:hover{
 .capa_imagen:hover{
     /* animation: capaImagen 1s forwards; */
     opacity: 1;
+}
+
+.container_info{
+    position: relative;
+    bottom: 305px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
 
 @keyframes capaImagen {
